@@ -1,3 +1,13 @@
+2004-10-15  Chris Blumenberg  <cblu@apple.com>
+
+	Fixed: <rdar://problem/3841774> would like to get NSColor from DOM-CSS
+
+        Reviewed by john.
+
+        * kwq/DOM-CSS.mm:
+        (-[DOMRGBColor _color]): new, returns getNSColor on KWQColor
+        * kwq/DOMPrivate.h:
+
 2004-10-15  Ken Kocienda  <kocienda@apple.com>
 
         Reviewed by Hyatt
